syntax = "proto3";

package pb;

option go_package = "./pb";

// 用户登录
message LoginReq {
  string Account = 1;
  string Password = 2;
}
message LoginResp {
  string AccessToken = 1;
  int64 AccessExpire = 2;
}

// 用户注册
message RegisterReq {
  string Account = 1;
  string Password = 2;
  string Email = 3;
}
message RegisterResp {
  int64 Id = 1;
  string Account = 2;
  string Email = 3;
}

// 用户信息
message UserInfoReq {
  int64 Id = 1;
}
message UserInfoResp {
  int64 Id = 1;
  string Account = 2;
  string Email = 3;
  string Signature = 4;
  string Avatar = 5;
  string CreateTime = 6;
  string UpdateTime = 7;
}

message GenerateTokenReq {
  int64 userId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
}

message SearchUserReq {
  int32 SortType = 1;
  int32 Offset = 2;
  int32 PageSize = 3;
  string Keyword = 4;
}

message UserInfoView {
  int64 Id = 1;
  string Account = 2;
  string Avatar = 3;
  string Email = 4;
  string CreateTime = 5;
}

message SearchUserResp {
  int32 Total = 1;
  repeated UserInfoView Users = 2;
}

message GetUserIdsReq {

}

message GetUserIdsResp {
  repeated int64 UserIds = 1;
}

service User {
  rpc Login(LoginReq) returns(LoginResp);
  rpc Register(RegisterReq) returns(RegisterResp);
  rpc UserInfo(UserInfoReq) returns(UserInfoResp);
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  rpc SearchUser(SearchUserReq) returns(SearchUserResp);
  rpc GetUserIds(GetUserIdsReq) returns(GetUserIdsResp);
}